--- a/style.css
+++ b/style.css
@@ -22,6 +22,12 @@ code p {
   text-align: center;
   font-size: 12px;
 }
+
+comment {
+    text-align: center;
+    font-size: 12px;
+    color: blue;
+}
 .ui.inverted.menu{
   padding-bottom: 20px;
   padding-top: 20px;
